--- a/podinfo/configmap-podinfo-helm-chart-value-overrides.yaml
+++ b/podinfo/configmap-podinfo-helm-chart-value-overrides.yaml
@@ -114,7 +114,7 @@ data:
         # kubernetes.io/ingress.class: nginx
         # kubernetes.io/tls-acme: "true"
       hosts:
-        - host: podinfo2.lan.dazzla.net
+        - host: podinfo.lan.dazzla.net
           paths:
             - path: /
               pathType: ImplementationSpecific
